--- a/templates/videopage.html
+++ b/templates/videopage.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 {% for row in data %}
+{% for info in channel %}
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-        {{ row[1] }}
+        {{ row[3] }}
     </title>
     <link rel="icon" href="https://s.ytimg.com/yts/img/favicon_32-vflOogEID.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap" rel="stylesheet" />
@@ -41,69 +42,70 @@
             <i class="material-icons account-icon">account_circle</i>
         </div>
     </nav>
-
     <main>
         <section class="player">
             <div class="youtube-player">
-                <video src="{{ url_for('static', filename='videos/') }}{{ row[3] }}" alt="image" width="100%" height="600" controls autoplay>
+                <video src="{{ url_for('static', filename='videos/') }}{{ row[5] }}" alt="image" width="100%"
+                    height="600" controls autoplay>
                 </video>
             </div>
             <div class="video-info">
                 <h1 class="title">
-                    {{ row[1] }}
+                    {{ row[2] }}
                 </h1>
-                <!-- <div class="video-toolbar">
+                <div class="video-toolbar">
                     <span class="video-views">
-                        599,043 views
+                        {{ row[4] }} views • {{ row[6] }}
                     </span>
-                    <span class="right-menu">
+                    <!-- <span class="right-menu">
                         <div class="thumb-wrapper">
                             <a class="thumb-up-btn">
                                 <i class="material-icons">thumb_up</i>
                                 <span class="thumbs-count">26K</span>
-                    </a>
+                            </a>
 
-                    <a class="thumb-down-btn">
-                        <i class="material-icons">thumb_down</i>
-                        <span class="thumbs-count">361</span>
-                    </a>
+                            <a class="thumb-down-btn">
+                                <i class="material-icons">thumb_down</i>
+                                <span class="thumbs-count">361</span>
+                            </a>
+                        </div>
+
+                        <a class="share-btn">
+                            <i class="material-icons">reply</i>
+                            <span>SHARE</span>
+                        </a>
+
+                        <a class="save-btn">
+                            <i class="material-icons">playlist_add</i>
+                            <span>SAVE</span>
+                        </a>
+                        <a class="options-btn">
+                            <i class="material-icons">more_horiz</i>
+                        </a>
+                    </span> -->
                 </div>
-
-                <a class="share-btn">
-                    <i class="material-icons">reply</i>
-                    <span>SHARE</span>
-                </a>
-
-                <a class="save-btn">
-                    <i class="material-icons">playlist_add</i>
-                    <span>SAVE</span>
-                </a>
-                <a class="options-btn">
-                    <i class="material-icons">more_horiz</i>
-                </a> -->
-                </span>
-            </div>
             </div>
 
             <section class="channel-info">
-                <!-- <div class="avatar">
-                    <div></div>
-                </div> -->
+                <div class="avatar">
+                    <img src="{{ info[3] }}" alt="">
+                </div>
                 <div class="description">
-                    <h2>{{ row[4] }}</h2>
-                    <h3>{{ row[5] }}</h3>
-                    <p>{{ row[2] }}</p>
+                    <h2>{{ info[1] }}</h2>
+                    <h3></h3>
+                    <p>{{ row[3] }}</p>
                     <!-- <p class="show-more">show more</p> -->
                 </div>
                 <div class="subscribe">
-                    <!-- <button> subscribe <span>293K</span></button> -->
+                    <button> subscribe <span>{{ info[2] }}</span></button>
                 </div>
             </section>
-
+        </section>
 
     </main>
 
 </body>
+{% endfor %}
 {% endfor %}
 
 </html>
