--- a/templates/channel.html
+++ b/templates/channel.html
@@ -168,8 +168,14 @@
                     </div>
                     <div class="col-md-6  col-xs-6 pl-2">
                         <div class="profile">
-                            <div class="profile_title">{{ row[1] }}</div>
+                            <div class="profile_title">
+                                <h3>{{ row[1] }}</h4>
+                            </div>
+                            <h4>{{ row[2] }}</h4>
                         </div>
+                    </div>
+                    <div class="col-md-2 profile">
+                        <h4>Created on: {{ row[4] }}</h4>
                     </div>
                 </div>
 
@@ -180,25 +186,26 @@
             <div class="container-fluid">
                 <div class="row videos">
                     {% for video in videos %}
-                        <div class="col-md-3 col-sx-10 p-2">
-                            <a href="{{ url_for('videoPage', id='') }}{{ video[0] }}">
-                                <div class="card">
-                                    <video src="{{ url_for('static', filename='videos/') }}{{ video[5] }}" alt="image" height="174">
-                                    </video>
-                                    <div class="row">
-                                        <div class="col-10 mt-3">
-                                            <p class="mb-2" title="{{ row[1] }}">
-                                                {{ video[2] }}
-                                            </p>
-                                            <p style="color:#606060;">
-                                                {{ row[1] }}<br>{{ video[6] }}
-                                            </p>
-                                        </div>
-
+                    <div class="col-md-3 col-sx-10 p-2">
+                        <a href="{{ url_for('videoPage', id='') }}{{ video[0] }}">
+                            <div class="card">
+                                <video src="{{ url_for('static', filename='videos/') }}{{ video[5] }}" alt="image"
+                                    height="174">
+                                </video>
+                                <div class="row">
+                                    <div class="col-10 mt-3">
+                                        <p class="mb-2" title="{{ row[1] }}">
+                                            {{ video[2] }}
+                                        </p>
+                                        <p style="color:#606060;">
+                                            {{ row[1] }}<br>{{ video[6] }}
+                                        </p>
                                     </div>
+
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
+                    </div>
                     {% endfor %}
                 </div>
             </div>
