--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -3,493 +3,524 @@ font-family: 'Roboto', sans-serif;
 font-family: 'Roboto Mono', monospace;
 */
 
-
 /**** CSS RESET AND BASIC STYLING ****/
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
-    font-weight: normal;
-    line-height: 1.7;
+  font-family: "Roboto", sans-serif;
+  font-weight: normal;
+  line-height: 1.7;
 }
 
-
 /**** NABVAR ****/
-
 
 /* Nabar Wrapper */
 
 .nav {
-    align-items: center;
-    box-shadow: 0px 10px 24px -12px rgba(242, 241, 239, 0.7);
-    display: flex;
-    justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 10px 24px -12px rgba(242, 241, 239, 0.7);
+  display: flex;
+  justify-content: space-between;
 }
 
-
 /* END */
-
 
 /* Menu */
 
 .menu {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    margin-left: 3rem;
-    width: 14rem;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 3rem;
+  width: 14rem;
 }
 
 .youlogo {
-    width: 10rem;
+  width: 10rem;
 }
 
-
 /* END */
-
 
 /* Search Bar */
 
 .searchbar {
-    align-items: center;
-    background-color: #f7f7f7;
-    border-radius: 0.3rem;
-    border: 1px solid #ccc;
-    display: flex;
-    overflow: hidden;
-    width: 66rem;
+  align-items: center;
+  background-color: #f7f7f7;
+  border-radius: 0.3rem;
+  border: 1px solid #ccc;
+  display: flex;
+  overflow: hidden;
+  width: 66rem;
 }
 
 .searchbar form {
-    width: 100%;
+  width: 100%;
 }
 
 .searchbar input {
-    border-right: 1px solid #ccc;
-    border: none;
-    font-size: 1.5rem;
-    outline: none;
-    padding: 0.5rem 0.9rem;
-    width: 100%;
+  border-right: 1px solid #ccc;
+  border: none;
+  font-size: 1.5rem;
+  outline: none;
+  padding: 0.5rem 0.9rem;
+  width: 100%;
 }
 
 .searchbar input::placeholder {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .searchbar .search-btn {
-    align-items: stretch;
-    display: flex;
-    justify-content: center;
-    width: 10%;
+  align-items: stretch;
+  display: flex;
+  justify-content: center;
+  width: 10%;
 }
 
 .searchbar .search-icon {
-    color: #888;
-    font-size: 2rem;
+  color: #888;
+  font-size: 2rem;
 }
 
-
 /* END */
-
 
 /* Feature Icons */
 
 .material-icons {
-    color: #666;
-    font-size: 2.4rem;
+  color: #666;
+  font-size: 2.4rem;
 }
 
 .feature-icons {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    margin-right: 4rem;
-    position: relative;
-    width: 22rem;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-right: 4rem;
+  position: relative;
+  width: 22rem;
 }
 
 .feature-icons .account-icon {
-    color: #b1348a;
-    font-size: 3.5rem;
+  color: #b1348a;
+  height: 3.5rem;
+  border-radius: 50%;
+}
+
+
+.feature-icons button{
+    font-size: 1.1em;
+}
+/* Dropdown button on hover & focus */
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #2980b9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+
+  position: fixed;
+  transform: translate(-70%, 8%);
+
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+  display: block;
 }
 
 .bell-icon-badge {
-    background-color: rgb(204, 22, 0);
-    border-radius: 50%;
-    color: #fff;
-    display: inline-block;
-    height: 19px;
-    position: absolute;
-    right: 49px;
-    text-align: center;
-    top: 0;
-    width: 19px;
+  background-color: rgb(204, 22, 0);
+  border-radius: 50%;
+  color: #fff;
+  display: inline-block;
+  height: 19px;
+  position: absolute;
+  right: 49px;
+  text-align: center;
+  top: 0;
+  width: 19px;
 }
 
-
 /* END */
-
 
 /* Main contents */
 
 main {
-    display: flex;
-    padding: 2.5rem 7.5rem;
+  display: flex;
+  padding: 2.5rem 7.5rem;
 }
 
 .main-nav ul a {
-    display: flex !important;
+  display: flex !important;
 }
 
 .main-nav li {
-    margin: 1em;
+  margin: 1em;
 }
 
 .main-nav li a span {
-    margin-right: 0.3rem;
+  margin-right: 0.3rem;
 }
 
 .player {
-    display: block;
-    margin-right: 2.5rem;
-    width: 67%;
+  display: block;
+  margin-right: 2.5rem;
+  width: 67%;
 }
 
 .video-info {
-    border-bottom: 1px solid #ccc;
-    margin-top: 1.3rem;
+  border-bottom: 1px solid #ccc;
+  margin-top: 1.3rem;
 }
 
 .video-info .title {
-    font-size: 1.8rem;
-    font-weight: 300;
+  font-size: 1.8rem;
+  font-weight: 300;
 }
 
 .sidebar {
-    /* background-color: #3634b1; */
-    width: 31%;
+  /* background-color: #3634b1; */
+  width: 31%;
 }
 
 .video-toolbar {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
 }
 
 .video-views {
-    color: #555;
-    font-size: 1.7rem;
-    font-weight: 200;
+  color: #555;
+  font-size: 1.7rem;
+  font-weight: 200;
 }
 
 .right-menu {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    width: 40%;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  width: 40%;
 }
 
 .right-menu .material-icons,
 .right-menu span {
-    color: #888;
-    font-size: 2rem;
+  color: #888;
+  font-size: 2rem;
 }
 
 .right-menu .share-btn .material-icons {
-    transform: scale(-1, 1);
+  transform: scale(-1, 1);
 }
 
 .right-menu a span {
-    font-size: 1.3rem;
-    font-weight: bold;
-    margin-left: 0.6rem;
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-left: 0.6rem;
 }
 
 .thumb-wrapper,
 .share-btn,
 .save-btn,
 .options-btn {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .thumb-wrapper {
-    border-bottom: 2px solid #888;
-    padding: 1.3rem 0;
+  border-bottom: 2px solid #888;
+  padding: 1.3rem 0;
 }
 
 .thumb-up-btn,
 .thumb-down-btn {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    margin-right: 1.4rem;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-right: 1.4rem;
 }
 
 .thumb-down-btn {
-    margin-left: 1.4rem;
-    margin-right: 0;
+  margin-left: 1.4rem;
+  margin-right: 0;
 }
-
 
 /* SIDE BAR */
 
 .suggested-video {
-    display: flex;
-    margin: 1rem 0;
+  display: flex;
+  margin: 1rem 0;
 }
 
 .suggested-video .thumbnail {
-    margin-right: 1rem;
-    position: relative;
+  margin-right: 1rem;
+  position: relative;
 }
 
 .suggested-video .thumbnail span {
-    background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 3px;
-    bottom: 1rem;
-    color: white;
-    display: inline-block;
-    font-family: inherit;
-    font-size: 1.2rem;
-    font-weight: bold;
-    letter-spacing: 0.1rem;
-    padding: 0.05rem 0.5rem;
-    position: absolute;
-    right: 1rem;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 3px;
+  bottom: 1rem;
+  color: white;
+  display: inline-block;
+  font-family: inherit;
+  font-size: 1.2rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  padding: 0.05rem 0.5rem;
+  position: absolute;
+  right: 1rem;
 }
 
 .suggested-video .thumbnail-info {
-    flex-basis: 54%;
+  flex-basis: 54%;
 }
 
 .suggested-video .thumbnail img {
-    height: 11rem;
+  height: 11rem;
 }
 
 .suggested-video .thumbnail-info h2 {
-    margin-bottom: 0.4rem;
+  margin-bottom: 0.4rem;
 }
 
 .suggested-video h2 {
-    line-height: 1.2;
+  line-height: 1.2;
 }
 
 .suggested-video .channel,
 .suggested-video .views {
-    color: #777;
-    font-size: 1.3rem;
-    font-weight: bold;
-    letter-spacing: 0.001rem;
-    line-height: 1.3;
+  color: #777;
+  font-size: 1.3rem;
+  font-weight: bold;
+  letter-spacing: 0.001rem;
+  line-height: 1.3;
 }
 
-
 /* END */
-
 
 /* Chanel Info */
 
 .channel-info {
-    border-bottom: 1px solid #ccc;
-    display: flex;
-    padding: 1.6rem 0;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  padding: 1.6rem 0;
 }
 
 .channel-info .avatar {
-    /* background-color: cornflowerblue; */
-    flex-basis: 10%;
+  /* background-color: cornflowerblue; */
+  flex-basis: 10%;
 }
 
 .channel-info .description {
-    /* background-color: coral; */
-    flex-basis: 70%;
+  /* background-color: coral; */
+  flex-basis: 70%;
 }
 
 .channel-info .subscribe {
-    /* background-color: deeppink; */
-    align-self: flex-start;
-    display: flex;
-    flex-basis: 30%;
-    justify-content: flex-end;
+  /* background-color: deeppink; */
+  align-self: flex-start;
+  display: flex;
+  flex-basis: 30%;
+  justify-content: flex-end;
 }
 
 .channel-info .subscribe button {
-    background-color: rgb(204, 22, 0);
-    border-radius: 2px;
-    border: none;
-    color: white;
-    font-size: 1.4rem;
-    padding: 1rem 1.8rem;
-    text-transform: uppercase;
+  background-color: rgb(204, 22, 0);
+  border-radius: 2px;
+  border: none;
+  color: white;
+  font-size: 1.4rem;
+  padding: 1rem 1.8rem;
+  text-transform: uppercase;
 }
 
 .channel-info .subscribe button span {
-    display: inline-block;
-    margin-left: 0.3rem;
+  display: inline-block;
+  margin-left: 0.3rem;
 }
 
 .description h2,
 .description h3 {
-    color: #333;
-    line-height: 1.3;
+  color: #333;
+  line-height: 1.3;
 }
 
 .description h3 {
-    color: #777;
-    font-size: 1.3rem;
-    font-weight: 200;
-    margin-bottom: 1.7rem;
+  color: #777;
+  font-size: 1.3rem;
+  font-weight: 200;
+  margin-bottom: 1.7rem;
 }
 
 .description p {
-    color: #333;
-    font-size: 1.4rem;
-    line-height: 1.6;
+  color: #333;
+  font-size: 1.4rem;
+  line-height: 1.6;
 }
 
 .description .show-more {
-    color: #777;
-    cursor: pointer;
-    margin-top: 0.8rem;
-    text-transform: uppercase;
+  color: #777;
+  cursor: pointer;
+  margin-top: 0.8rem;
+  text-transform: uppercase;
 }
 
 .avatar div {
-    background-color: red;
-    background-image: url("assets/profile.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 50%;
-    height: 5rem;
-    width: 5rem;
+  background-color: red;
+  background-image: url("assets/profile.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50%;
+  height: 5rem;
+  width: 5rem;
 }
 
 .material-icons:hover,
 button:hover,
 img:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-
 /* END */
-
 
 /* Comments */
 
 .comments {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 
 .comment-toolbar {
-    align-items: center;
-    display: flex;
+  align-items: center;
+  display: flex;
 }
 
 .comment-toolbar div:nth-child(1) {
-    /* background-color: yellow; */
-    color: #444;
-    font-size: 1.6rem;
-    margin-right: 3rem;
+  /* background-color: yellow; */
+  color: #444;
+  font-size: 1.6rem;
+  margin-right: 3rem;
 }
 
 .comment-toolbar div:nth-child(2) {
-    /* background-color:darksalmon; */
-    align-items: center;
-    color: #999;
-    display: flex;
-    font-size: 1.5rem;
+  /* background-color:darksalmon; */
+  align-items: center;
+  color: #999;
+  display: flex;
+  font-size: 1.5rem;
 }
 
 .comment-toolbar .material-icons {
-    color: #999;
-    font-size: 2.6rem;
-    margin-right: 1rem;
+  color: #999;
+  font-size: 2.6rem;
+  margin-right: 1rem;
 }
 
 .add-comment {
-    align-items: baseline;
-    display: flex;
-    margin-top: 1.8rem;
+  align-items: baseline;
+  display: flex;
+  margin-top: 1.8rem;
 }
 
 .add-comment .account-icon {
-    color: green;
-    font-size: 5.7rem;
+  color: green;
+  font-size: 5.7rem;
 }
 
 .add-comment input {
-    border-bottom: 0.5px solid #ccc;
-    border: none;
-    color: #aaa;
-    font-size: 1.4rem;
-    margin-left: 2%;
-    outline: none;
-    padding: 1rem 0;
-    transform: translateY(-75%);
-    width: 90.7%;
+  border-bottom: 0.5px solid #ccc;
+  border: none;
+  color: #aaa;
+  font-size: 1.4rem;
+  margin-left: 2%;
+  outline: none;
+  padding: 1rem 0;
+  transform: translateY(-75%);
+  width: 90.7%;
 }
 
 .comment {
-    display: flex;
-    font-size: 1.4rem;
-    margin: 1.4rem 0;
+  display: flex;
+  font-size: 1.4rem;
+  margin: 1.4rem 0;
 }
 
 .comment-info {
-    margin-left: 2rem;
+  margin-left: 2rem;
 }
 
-.comment-info>* {
-    margin-bottom: 0.1rem;
+.comment-info > * {
+  margin-bottom: 0.1rem;
 }
 
 .comment-info div {
-    margin-top: 0.8rem;
+  margin-top: 0.8rem;
 }
 
 .comment-info h3 {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 .comment-info h3 span {
-    color: #777;
-    font-weight: 200;
-    margin-left: 0.5rem;
+  color: #777;
+  font-weight: 200;
+  margin-left: 0.5rem;
 }
 
 .comment-info div {
-    display: flex;
+  display: flex;
 }
 
 .comment-avatar img {
-    background-color: red;
-    border-radius: 50%;
-    height: 5rem;
-    width: 5rem;
+  background-color: red;
+  border-radius: 50%;
+  height: 5rem;
+  width: 5rem;
 }
 
 .comment-info .material-icons {
-    color: #777;
-    font-size: 1.7rem;
-    margin-right: 1rem;
+  color: #777;
+  font-size: 1.7rem;
+  margin-right: 1rem;
 }
 
 .comment-info div a {
-    margin-right: 2rem;
+  margin-right: 2rem;
 }
-
 
 /* END */
