Changed video url meta
Changed the video url so that it loads from actual url instead of local videos

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -160,7 +160,7 @@
                     <div class="col-md-3 col-sx-10 p-2">
                         <div class="card">
                             <a href="{{ url_for('videoPage', id='') }}{{ row[0] }}">
-                                <video src="{{ url_for('static', filename='videos/') }}{{ row[5] }}" alt="image"
+                                <video src="{{ row[5] }}" alt="image"
                                     height="174">
                                 </video>
                             </a>
