--- a/templates/searchpage.html
+++ b/templates/searchpage.html
@@ -212,7 +212,7 @@
                         <div class="card">
                             <div class="row">
                                 <div class="col-md-3">
-                                    <video src="{{ url_for('static', filename='videos/') }}{{ row[5] }}" alt="image" height="174">
+                                    <video src="{{ row[5] }}" alt="image" height="174">
                                     </video>
                                 </div>
                                 <div class="col-md-7 p-0 pt-2">
