--- a/templates/channel.html
+++ b/templates/channel.html
@@ -179,7 +179,7 @@
                     <div class="col-md-3 col-sx-10 p-2">
                         <a href="{{ url_for('videoPage', id='') }}{{ video[0] }}">
                             <div class="card">
-                                <video src="{{ url_for('static', filename='videos/') }}{{ video[5] }}" alt="image"
+                                <video src="{{ video[5] }}" alt="image"
                                     height="174">
                                 </video>
                                 <div class="row">
