--- a/templates/videopage.html
+++ b/templates/videopage.html
@@ -62,7 +62,7 @@
     <main>
         <section class="player">
             <div class="youtube-player">
-                <video src="{{ url_for('static', filename='videos/') }}{{ row[5] }}" alt="image" width="100%"
+                <video src="{{ row[5] }}" alt="image" width="100%"
                     height="600" controls autoplay>
                 </video>
             </div>
@@ -105,7 +105,7 @@
 
             <section class="channel-info">
                 <div class="avatar">
-                    <a href="{{ url_for('channel', channel='') }}{{ row[1] }}">
+                    <a href="{{ url_for('channel', channel='') }}{{ row[8] }}">
                         <img src="{{ row[11] }}" alt="">
                     </a>
                 </div>
