--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,180 +21,77 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="{{ url_for('static',filename='styles/videopage.css') }}" />
+    <!-- <link rel="stylesheet" href="{{ url_for('static',filename='styles/videopage.css') }}" /> -->
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}" />
 </head>
 
 <body>
 
     <!-- mobile top navbar -->
-    <nav class="nav">
+    <nav class="nav d-flex justify-content-around align-items-center">
         <div class="menu">
-            <i class="material-icons">menu</i>
             <a href="/">
                 <img class="youlogo" src="{{ url_for('static',filename='images/youlogo.png') }}" />
             </a>
         </div>
-        <div class="searchbar">
-            <form method="POST" action="search">
-                <input type="text" name="search" id="search" placeholder="Search" />
-            </form>
-            <div class="search-btn">
+        <form class="searchbar" method="POST" action="search">
+            <input type="text" name="search" id="search" placeholder="Search" />
+            <button class="search-btn">
                 <i class="material-icons search-icon">search</i>
-            </div>
-        </div>
-        <div class="feature-icons">
-            <i class="material-icons">video_call</i>
-            <!-- <i class="material-icons">apps</i>
-            <i class="material-icons">message</i>
-            <i class="material-icons">notifications</i>
-            <span class="bell-icon-badge">9+</span> -->
-            {% if userinf %}
-                {% for inf in userinf %}
-                <div class="dropdown">
-                    <img onclick="channeldropdown()" class="account-icon channel_img" src="{{ inf[4] }}" alt="">
-                    <div id="channeldropdown" class="dropdown-content">
-                        <div class="content">
-                            <a href="{{ url_for('channel', channel='') }}{{ inf[1] }}">{{ inf[1] }}</a>
-                            <a href="/logout">Logout</a>
-                        </div>
+            </button>
+        </form>
+            
+        {% if userinf %}
+            {% for inf in userinf %}
+            <div class="dropdown">
+                <img onclick="channeldropdown()" class="account-icon channel_img" src="{{ inf[4] }}" alt="">
+                <div id="channeldropdown" class="dropdown-content">
+                    <div class="content">
+                        <a href="{{ url_for('channel', channel='') }}{{ inf[1] }}">{{ inf[1] }}</a>
+                        <a href="/logout">Logout</a>
                     </div>
                 </div>
-                {% endfor %}
-            {% else %}
-                <button onclick="location.href='login';" type="button" class="btn btn-outline-primary">Login</button>
-            {% endif %}
-        </div>
+            </div>
+            {% endfor %}
+        {% else %}
+            <button onclick="location.href='login';" type="button" class="btn btn-outline-primary">Login</button>
+        {% endif %}
     </nav>
     <!-- mobile top navbar -->
 
-    <!-- sidebar -->
-    <nav class="main-nav">
-        <ul>
-            <li class="">
-                <a href="index.html">
-                    <span class="fa fa-2x">
-                        <svg style="display: block; height: 24px; width: 24px;margin: auto;" viewBox="0 0 24 24">
-                            <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8" fill="red"></path>
-                        </svg>
-                    </span>
-                    <h3 class="nav-text">
-                        Home
-                    </h3>
-                </a>
-            </li>
 
-            <li class="has-subnav">
-                <a href="trending.html">
-                    <span class="fa fa-2x">
-                        <svg style="display: block; height: 24px; width: 24px;margin: auto;" viewBox="0 0 24 24">
-                            <path
-                                d="M17.53 11.2c-.23-.3-.5-.56-.76-.82-.65-.6-1.4-1.03-2.03-1.66-1.46-1.46-1.78-3.87-.85-5.72-.9.23-1.75.75-2.45 1.32C8.9 6.4 7.9 10.07 9.1 13.22c.04.1.08.2.08.33 0 .22-.15.42-.35.5-.22.1-.46.04-.64-.12-.06-.05-.1-.1-.15-.17-1.1-1.43-1.28-3.48-.53-5.12C5.87 10 5 12.3 5.12 14.47c.04.5.1 1 .27 1.5.14.6.4 1.2.72 1.73 1.04 1.73 2.87 2.97 4.84 3.22 2.1.27 4.35-.12 5.96-1.6 1.8-1.66 2.45-4.3 1.5-6.6l-.13-.26c-.2-.45-.47-.87-.78-1.25zm-3.1 6.3c-.28.24-.73.5-1.08.6-1.1.38-2.2-.16-2.88-.82 1.2-.28 1.9-1.16 2.1-2.05.17-.8-.14-1.46-.27-2.23-.12-.74-.1-1.37.2-2.06.15.38.35.76.58 1.06.76 1 1.95 1.44 2.2 2.8.04.14.06.28.06.43.03.82-.32 1.72-.92 2.26z"
-                                fill="#606060"></path>
-                        </svg>
-                    </span>
-                    <h3 class="nav-text">
-                        Trending
-                    </h3>
-                </a>
-            </li>
-
-            <li class="has-subnav mb-2">
-                <a href="subscription.html">
-                    <span class="fa fa-2x">
-                        <svg style="display: block; height: 24px; width: 24px;margin: auto;" viewBox="0 0 24 24">
-                            <path
-                                d="M18.7 8.7H5.3V7h13.4v1.7zm-1.7-5H7v1.6h10V3.7zm3.3 8.3v6.7c0 1-.7 1.6-1.6 1.6H5.3c-1 0-1.6-.7-1.6-1.6V12c0-1 .7-1.7 1.6-1.7h13.4c1 0 1.6.8 1.6 1.7zm-5 3.3l-5-2.7V18l5-2.7z"
-                                fill="#606060"></path>
-                        </svg>
-                    </span>
-                    <h3 class="nav-text">
-                        Subscription
-                    </h3>
-                </a>
-            </li>
-
-            <li class="has-subnav border-top">
-                <a href="library.html">
-                    <span class="fa fa-2x">
-                        <svg style="display: block; height: 24px; width: 24px;margin: auto;" viewBox="0 0 24 24">
-                            <path
-                                d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8 12.5v-9l6 4.5-6 4.5z"
-                                fill="#606060"></path>
-                        </svg>
-                    </span>
-                    <h3 class="nav-text">
-                        Library
-                    </h3>
-                </a>
-            </li>
-            <li class="has-subnav">
-                <a href="history.html">
-                    <span class="fa fa-2x">
-                        <svg style="display: block; height: 24px; width: 24px;margin: auto;" viewBox="0 0 24 24">
-                            <path
-                                d="M11.9 3.75c-4.55 0-8.23 3.7-8.23 8.25H.92l3.57 3.57.04.13 3.7-3.7H5.5c0-3.54 2.87-6.42 6.42-6.42 3.54 0 6.4 2.88 6.4 6.42s-2.86 6.42-6.4 6.42c-1.78 0-3.38-.73-4.54-1.9l-1.3 1.3c1.5 1.5 3.55 2.43 5.83 2.43 4.58 0 8.28-3.7 8.28-8.25 0-4.56-3.7-8.25-8.26-8.25zM11 8.33v4.6l3.92 2.3.66-1.1-3.2-1.9v-3.9H11z"
-                                fill="#606060"></path>
-                        </svg>
-                    </span>
-                    <h3 class="nav-text">
-                        History
-                    </h3>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <!-- sidebar -->
-
-    <!-- main content -->
-    <div class="row main_container">
-        <div class="col-md-2"></div>
-        <div class="col-md-10">
-            <!-- Recommended section -->
-            <div class="container-fluid">
-                <div class="grid_title">
-                    <h2>Recommended</h2>
-                </div>
-                <div class="row">
-                    {% for row in data %}
-                    <div class="col-md-3 col-sx-10 p-2">
-                        <div class="card">
-                            <a href="{{ url_for('videoPage', id='') }}{{ row[0] }}">
-                                <video src="{{ row[5] }}" alt="image"
-                                    height="174">
-                                </video>
-                            </a>
-                            <a class="row" href="{{ url_for('channel', channel='') }}{{ row[8] }}">
-                                <div class="col-2 mt-3">
-                                    <img id="img" width="48" src="{{ row[10] }}" class="rounded-circle">
-                                </div>
-                                <div class="col-10 mt-3">
-                                    <p class="mb-2" title="{{ row[1] }}">
-                                        {{ row[2] }}
-                                    </p>
-                                    <p style="color:#606060;">
-                                        {{ row[8] }}
-                                        <br>
-                                        {{ row[4] }} • {{ row[6] }}
-                                    </p>
-                                </div>
-
-                            </a>
+    <!-- Recommended section -->
+    <div class="container-fluid w-75 mx-auto mt-5">
+        <h2 class="ml-4">Recommended</h2>
+        <div class="d-flex flex-wrap">
+            {% for row in data %}
+            <div class="col-md-3 mt-5">
+                <div class="card">
+                    <a href="{{ url_for('videoPage', id='') }}{{ row[0] }}">
+                        <video class="w-100" src="{{ row[5] }}" alt="image">
+                        </video>
+                    </a>
+                    <a class="row" href="{{ url_for('channel', channel='') }}{{ row[8] }}">
+                        <div class="col-2 mt-3">
+                            <img id="img" width="48" src="{{ row[10] }}" class="rounded-circle">
                         </div>
-                    </div>
-                    {% endfor %}
+                        <div class="col-10 mt-3">
+                            <h4 class="mb-2">
+                                {{ row[2] }}
+                            </h4>
+                            <h5>
+                                {{ row[8] }}
+                                <br>
+                                {{ row[4] }} • {{ row[6] }}
+                            </h5>
+                        </div>
+                    </a>
                 </div>
             </div>
-            <!-- Recommended Section -->
-
-
+            {% endfor %}
         </div>
+        <!-- Recommended Section -->
     </div>
-    </div>
-    <!-- Trending Section -->
-    </div>
-    </div>
-    <!-- main content -->
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
