--- a/templates/login.html
+++ b/templates/login.html
@@ -24,46 +24,37 @@
 </head>
 
 <body>
-
     <!-- mobile top navbar -->
-    <nav class="nav">
+    <nav class="nav d-flex justify-content-around align-items-center">
         <div class="menu">
-            <i class="material-icons">menu</i>
             <a href="/">
                 <img class="youlogo" src="{{ url_for('static',filename='images/youlogo.png') }}" />
             </a>
         </div>
-        <div class="searchbar">
-            <form method="POST" action="search">
-                <input type="text" name="search" id="search" placeholder="Search" />
-            </form>
-            <div class="search-btn">
+        <form class="searchbar" method="POST" action="search">
+            <input type="text" name="search" id="search" placeholder="Search" />
+            <button class="search-btn">
                 <i class="material-icons search-icon">search</i>
-            </div>
-        </div>
-        <div class="feature-icons">
-            <i class="material-icons">video_call</i>
-            <!-- <i class="material-icons">apps</i>
-            <i class="material-icons">message</i>
-            <i class="material-icons">notifications</i>
-            <span class="bell-icon-badge">9+</span> -->
-            {% if userinf %}
-                {% for inf in userinf %}
-                <div class="dropdown">
-                    <img onclick="channeldropdown()" class="account-icon channel_img" src="{{ inf[4] }}" alt="">
-                    <div id="channeldropdown" class="dropdown-content">
-                        <div class="content">
-                            <a href="{{ url_for('channel', channel='') }}{{ inf[1] }}">{{ inf[1] }}</a>
-                            <a href="/logout">Logout</a>
-                        </div>
+            </button>
+        </form>
+            
+        {% if userinf %}
+            {% for inf in userinf %}
+            <div class="dropdown">
+                <img onclick="channeldropdown()" class="account-icon channel_img" src="{{ inf[4] }}" alt="">
+                <div id="channeldropdown" class="dropdown-content">
+                    <div class="content">
+                        <a href="{{ url_for('channel', channel='') }}{{ inf[1] }}">{{ inf[1] }}</a>
+                        <a href="/logout">Logout</a>
                     </div>
                 </div>
-                {% endfor %}
-            {% else %}
-                <button onclick="location.href='login';" type="button" class="btn btn-outline-primary">Login</button>
-            {% endif %}
-        </div>
+            </div>
+            {% endfor %}
+        {% else %}
+            <button onclick="location.href='login';" type="button" class="btn btn-outline-primary">Login</button>
+        {% endif %}
     </nav>
+    <!-- mobile top navbar -->
 
     <!-- Login form -->
     
